--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,3 +65,14 @@ workflows:
     jobs:
       - test
       - jupyterServerTest
+       police 
+       feuerwer 
+       amr 
+       hb187 
+       mafia
+       kartel 
+       admininstatro 
+       supoter 
+       mechnika 
+       cardiler 
+       
